--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Folders
 node_modules
 dist
 dist-ssr
 *.local
+
+# Files
+.env
 
 # Editor directories and files
 .vscode/*
