--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.5",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.10.0",
-    "@tanstack/react-query-devtools": "^5.10.0",
+    "@tanstack/react-query-devtools": "^5.13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
