--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
