--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@material-tailwind/react": "^2.1.5",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.10.0",
